--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,29 +19,19 @@ rust-version = "1.75.0"
 # there are a few windows-specific ones
 autoexamples = false
 
-[dependencies.tokio]
-version = "1.33.0"
-features = ["io-util", "macros", "process", "rt"]
-optional = true
+[dependencies]
+indexmap = "2.2.5"
+tokio = { version = "1.33.0", features = ["io-util", "macros", "process", "rt"], optional = true }
+tracing = "0.1.40"
 
-[target.'cfg(unix)'.dependencies.nix]
-version = "0.27.1"
-default-features = false
-features = ["fs", "poll", "signal"]
-optional = true
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.27.1", default-features = false, features = ["fs", "poll", "signal"], optional = true }
 
-[target.'cfg(windows)'.dependencies.winapi]
-version = "0.3.9"
-features = [
-	"impl-default",
-	"handleapi",
-	"ioapiset",
-	"jobapi2",
-	"processthreadsapi",
-	"tlhelp32",
-	"winbase",
-]
-optional = true
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3.9", features = ["impl-default", "handleapi", "ioapiset", "jobapi2", "processthreadsapi", "tlhelp32", "winbase"], optional = true }
+
+[dev-dependencies]
+tokio = { version = "1.33.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
 
 [features]
 default = ["std", "tokio1", "creation-flags", "job-object", "process-group", "process-session"]
@@ -67,13 +57,5 @@ process-session = ["dep:nix", "process-group"]
 ## Wrapper: Pty (TODO)
 pty = []
 
-
-[dev-dependencies]
-tokio = { version = "1.10.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
-
 [package.metadata.docs.rs]
 all-features = true
-
-[dependencies]
-indexmap = "2.2.5"
-tracing = "0.1.40"
