--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rust-version = "1.75.0"
 autoexamples = false
 
 [dependencies]
+futures = "0.3.30"
 indexmap = "2.2.5"
 tokio = { version = "1.33.0", features = ["io-util", "macros", "process", "rt"], optional = true }
 tracing = "0.1.40"
