--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ nix = { version = "0.27.1", default-features = false, features = ["fs", "poll", 
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["impl-default", "handleapi", "ioapiset", "jobapi2", "processthreadsapi", "tlhelp32", "winbase"], optional = true }
+windows = { version = "0.53.0", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1.33.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
@@ -44,7 +45,7 @@ std = []
 tokio1 = ["dep:tokio"]
 
 ## Wrapper: Creation Flags
-creation-flags = ["dep:winapi"]
+creation-flags = ["dep:windows", "windows/Win32_System_Threading"]
 
 ## Wrapper: Job Object
 job-object = ["dep:winapi"]
