--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ tokio1 = ["dep:tokio"]
 creation-flags = ["dep:windows", "windows/Win32_System_Threading"]
 
 ## Wrapper: Job Object
-job-object = ["dep:winapi"]
+job-object = ["dep:windows", "windows/Win32_Security", "windows/Win32_System_Diagnostics_ToolHelp", "windows/Win32_System_IO", "windows/Win32_System_JobObjects", "windows/Win32_System_Threading"]
 
 ## Wrapper: Process Group
 process-group = ["dep:nix"]
