--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ windows = { version = "0.53.0", optional = true }
 tokio = { version = "1.33.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
 
 [features]
-default = ["std", "tokio1", "creation-flags", "job-object", "process-group", "process-session"]
+default = ["creation-flags", "job-object", "process-group", "process-session"]
 
 ## Frontend: StdCommandWrap
 std = []
@@ -49,6 +49,9 @@ creation-flags = ["dep:windows", "windows/Win32_System_Threading"]
 
 ## Wrapper: Job Object
 job-object = ["dep:windows", "windows/Win32_Security", "windows/Win32_System_Diagnostics_ToolHelp", "windows/Win32_System_IO", "windows/Win32_System_JobObjects", "windows/Win32_System_Threading"]
+
+## Wrapper: Kill on Drop
+kill-on-drop = []
 
 ## Wrapper: Process Group
 process-group = ["dep:nix"]
