--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: "${{ matrix.platform }}-latest"
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Configure Rust
         run: |
@@ -33,15 +33,7 @@ jobs:
           rustup default ${{ matrix.toolchain }}
           rustup component add clippy
 
-      - name: Configure caching
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
+      - uses: Swatinem/rust-cache@v2
 
       - run: cargo test --features ${{ matrix.features }} --all-targets
       - run: cargo clippy --features ${{ matrix.features }}
@@ -51,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Configure Rust
         run: |
