--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ windows = { version = "0.54.0", optional = true }
 tokio = { version = "1.36.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
 
 [features]
-default = ["creation-flags", "job-object", "process-group", "process-session"]
+default = ["creation-flags", "job-object", "kill-on-drop", "process-group", "process-session"]
 
 ## Frontend: StdCommandWrap
 std = ["dep:nix"]
