--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ nix = { version = "0.28.0", default-features = false, features = ["fs", "poll", 
 windows = { version = "0.54.0", optional = true }
 
 [dev-dependencies]
+remoteprocess = "0.4.13"
 tokio = { version = "1.37.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
 
 [features]
