ci: add nightly to available toolchains

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Configure Rust
         run: |
+          rustup toolchain install --profile minimal --no-self-update nightly
           rustup toolchain install --profile minimal --no-self-update ${{ matrix.toolchain }}
           rustup default ${{ matrix.toolchain }}
           rustup component add clippy
