--- a/cliff.toml
+++ b/cliff.toml
@@ -56,6 +56,7 @@ link_parsers = [
 ]
 
 commit_parsers = [
+  { message = "^api", group = "API change" },
   { message = "^feat", group = "Feature" },
   { message = "^fix", group = "Bugfix" },
   { message = "^tweak", group = "Tweak" },
