--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,21 @@ futures = { version = "0.3.30", optional = true }
 indexmap = "2.2.6"
 tokio = { version = "1.37.0", features = ["io-util", "macros", "process", "rt"], optional = true }
 tracing = { version = "0.1.40", optional = true }
+# note: this library doesn't consider bumping the tokio minor to be
+# a breaking change, so long as it remains ~6 months below current
 
 [target.'cfg(unix)'.dependencies]
-nix = { version = "0.28.0", default-features = false, features = ["fs", "poll", "signal"], optional = true }
+nix = { version = "0.29.0", default-features = false, features = ["fs", "poll", "signal"], optional = true }
+# note: bumping the nix version doesn't require a breaking change,
+# as process-wrap is carefully designed to never expose nix's types
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.56.0", optional = true }
+windows = { version = "0.59.0", optional = true }
+# note: bumping the windows version doesn't require a breaking change,
+# as process-wrap is carefully designed to never expose windows's types
 
 [dev-dependencies]
-remoteprocess = "0.4.13"
+remoteprocess = "0.5"
 tokio = { version = "1.38.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
 
 [features]
