--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ windows = { version = "0.61.1", optional = true }
 
 [dev-dependencies]
 remoteprocess = "0.5.0"
+tempfile = { version = "3.20.0", default-features = false }
 tokio = { version = "1.38.2", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
 
 [features]
